cleared the security alert in the git

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://tutorialswebsite.com/cdn/google_places.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCejIGA5EwWnrPN2ppD9QnTtp9g4tCzJZQ&signed_in=true&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=%VITE_GOOGLE_API%&signed_in=true&libraries=places"></script>
 
     <!-- Google Tag Manager (noscript) -->
     <noscript
